# django-projeto-teste

./: db.sqlite3  pyproject.toml
core/: views.py
projetoteste/: asgi.py  settings.py  urls.py  wsgi.py
