[tool.poetry]
name = "projeto-teste"
version = "0.1.0"
description = ""
authors = ["Leonardo Brandão <econoel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
